# meson-tox-example

./: meson.build  pyproject.toml  tox.ini
